@@ -42,6 +42,7 @@ CHANGELOG Roundcube Webmail
 - Fix so links over images are not removed in plain text signatures converted from HTML (#4473)
 - Fix various issues when downloading files with names containing non-ascii chars, use RFC 2231 (#5772)
 - Fix bug where pink image was used instead of a thumbnail when image resize fails (#5933)
+- Fix so files size/count limit is verified (client-side) also on drag-n-drop uploads (#5940)
 
 RELEASE 1.3.1
 -------------
